[package]
name = "reporter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
lettre = "0.10.0-rc.4"
dotenv = "0.15.0"
log = "0.4"
fern = "0.5"
chrono = "0.4"